<resources>
    <string name="app_name">AltMetro</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="hw">w</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="action_settings">Settings</string>
    <string name="action_tracks">Tracks</string>
    <string name="action_play">Play</string>
    <string name="action_copy">Copy</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="label_beat">Beats</string>
    <string name="label_count">count repeats</string>
    <string name="label_edittrack">Edit track</string>
    <string name="label_addtrack">Add track</string>
    <string name="label_editpattern">Edit pattern</string>
    <string name="label_addpattern">Add pattern</string>
    <string name="label_editrepeat">Edit repeat</string>
    <string name="label_addrepeat">Add repeat</string>
    <string name="label_edittap">Tap tempo</string>
    <string name="label_editstudy" formatted="false">Edit study, tempo=%s</string>
    <string name="label_initStudy" >init</string>
    <string name="label_sub">Subdivision</string>
    <string name="label_firstBeat">Different sound on first beat</string>
    <string name="label_sub2">Subdiv</string>
    <string name="label_multi">Multiple tempi</string>
    <string name="label_multi_single">Single tempo</string>
    <string name="label_multi_multi">Multiple tempos</string>
    <string name="label_number">Number</string>
    <string name="label_pattern">Pattern</string>
    <string name="label_patterns">Patterns</string>
    <string name="label_practice">Practice</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_repeats">Repeats</string>
    <string name="label_study_off">No study</string>
    <string name="label_study_on">Study</string>
    <string name="label_tap">Tap</string>
    <string name="label_tempo">Tempo</string>
    <string name="label_tempo_from">From</string>
    <string name="label_tempo_to">To</string>
    <string name="label_tempo_increment">Step</string>
    <string name="label_tempo_rondes">Rounds</string>
    <string name="label_title">Title</string>
    <string name="label_timesig">time sign</string>
    <string name="label_timesigsep">/</string>
    <string name="label_track">Track</string>
    <string name="label_repeatTimes">%s times</string>
    <string name="label_times">times</string>
    <string name="label_noend">no end</string>
    <string name="label_repeatcount">Number of repeats</string>
    <string name="label_p1">+1</string>
    <string name="label_p5">+5</string>
    <string name="label_p20">+20</string>
    <string name="label_m1">-1</string>
    <string name="label_m5">-5</string>
    <string name="label_m20">-20</string>
    <string name="label_prac50">50%</string>
    <string name="label_prac70">70%</string>
    <string name="label_prac80">80%</string>
    <string name="label_prac85">85%</string>
    <string name="label_prac90">90%</string>
    <string name="label_prac95">95%</string>
    <string name="label_prac100">100%</string>
    <string name="error_countmin" formatted="false">count %s not greater than 0</string>
    <string name="error_tempomin" formatted="false">Tempo %s under minimum %s</string>
    <string name="error_tempomax" formatted="false">Tempo %s exceeds maximum %s</string>
    <string name="error_taptempolow" formatted="false">Tempo %s below minimum tempo %s. Corrected</string>
    <string name="error_taptempohigh" formatted="false">Tempo %s exceeds maximum tempo %s. Corrected</string>
    <string name="error_patinuse">Pattern in use. Deletion not allowed</string>
    <string name="error_restarting">Restarting....</string>
    <string name="error_building">Track build in progress....</string>
    <string name="error_unreachable" formatted="false">Repeat %s has no end. Next repeat unreachable</string>
    <string name="error_studyfromto">From not smaller than to</string>
    <string name="pref_title">Preferences</string>
    <string name="pref_multi">Default tracktype multi?</string>
    <string name="pref_maxtempo">Maximum metronome tempo</string>
    <string name="pref_showStudy">Show study on metro window</string>
    <string name="pref_showPractice">Show practice on metro window</string>
    <string name="list_add_item">Add item</string>
    <string name="list_select_track">Select a track</string>
    <string name="list_item_added">Item added</string>
    <string name="list_confirm_delete_item">Confirm delete item </string>
</resources>
