<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_track_study"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_track_study_tap"
            android:layout_width="wrap_content"
            style="@style/AppTheme.ListviewButton"
            android:text="@string/label_tap"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/tv_track_study_study"
            android:layout_width="match_parent"
            style="@style/AppTheme.ListviewButton"
            android:text="@string/label_study_off"
            android:gravity="left"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_track_practice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/rb_track_prac100"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rb_track_prac50"
            style="@style/AppTheme.RadioButtonPractice"
            android:text="@string/label_prac50"/>

        <RadioButton
            android:id="@+id/rb_track_prac70"
            style="@style/AppTheme.RadioButtonPractice"
            android:text="@string/label_prac70"/>

        <RadioButton
            android:id="@+id/rb_track_prac80"
            style="@style/AppTheme.RadioButtonPractice"
            android:text="@string/label_prac80"/>

        <RadioButton
            android:id="@+id/rb_track_prac90"
            style="@style/AppTheme.RadioButtonPractice"
            android:text="@string/label_prac90"/>

        <RadioButton
            android:id="@+id/rb_track_prac95"
            style="@style/AppTheme.RadioButtonPractice"
            android:text="@string/label_prac95"/>

        <RadioButton
            android:id="@+id/rb_track_prac100"
            style="@style/AppTheme.RadioButtonPractice"
            android:text="@string/label_prac100"/>

    </RadioGroup>
</LinearLayout>