<LinearLayout
    android:id="@+id/edit_track_info"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_number"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <EditText
            android:id="@+id/edittrack_number"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_title"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <EditText
            android:id="@+id/edittrack_titel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/label_multi"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/label_multi_single"
        android:textOn="@string/label_multi_multi"
        android:id="@+id/swDlgInfo_Multi" />

</LinearLayout>