<LinearLayout
    android:id="@+id/edit_track_pattern"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_dlgrepeatpat_emphasis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis0"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis1"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis2"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis3"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis4"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis5"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis6"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis7"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis8"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis9"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis10"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis11"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis12"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis13"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis14"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis15"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis16"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis17"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis18"
            style="@style/AppTheme.EmphasisList"/>

        <ImageView
            android:id="@+id/iv_dlgrepeatpat_emphasis19"
            style="@style/AppTheme.EmphasisList"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_spinnerPat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_pattern"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/label_pattern"/>

        <Spinner
            android:id="@+id/spinnerPat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/label_multi"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/label_multi_single"
        android:textOn="@string/label_multi_multi"
        android:id="@+id/swDlgRepeat_Multi" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/label_repeatcount"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <CheckBox
        android:id="@+id/cb_dlg_noend"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_noend"/>

    <RelativeLayout
        android:id="@+id/ll_dlg_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dlg_count_m20"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/button_dlg_count_m5"
            android:layout_toLeftOf="@+id/button_dlg_count_m5"
            android:layout_toStartOf="@+id/button_dlg_count_m5"
            android:text="@string/label_m20"/>

        <Button
            android:id="@+id/button_dlg_count_m5"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/button_dlg_count_m1"
            android:layout_toLeftOf="@+id/button_dlg_count_m1"
            android:layout_toStartOf="@+id/button_dlg_count_m1"
            android:text="@string/label_m5"/>

        <Button
            android:id="@+id/button_dlg_count_m1"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/tv_dlg_count"
            android:layout_toLeftOf="@+id/tv_dlg_count"
            android:layout_toStartOf="@+id/tv_dlg_count"
            android:text="@string/label_m1"/>

        <TextView
            android:id="@+id/tv_dlg_count"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/color_emphasis_low"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/hw"
            android:textColor="@color/color_text"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/button_dlg_count_p1"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/tv_dlg_count"
            android:layout_toEndOf="@+id/tv_dlg_count"
            android:layout_toRightOf="@+id/tv_dlg_count"
            android:text="@string/label_p1"/>


        <Button
            android:id="@+id/button_dlg_count_p5"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/button_dlg_count_p1"
            android:layout_toEndOf="@+id/button_dlg_count_p1"
            android:layout_toRightOf="@+id/button_dlg_count_p1"
            android:text="@string/label_p5"/>

        <Button
            android:id="@+id/button_dlg_count_p20"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/button_dlg_count_p5"
            android:layout_toEndOf="@+id/button_dlg_count_p5"
            android:layout_toRightOf="@+id/button_dlg_count_p5"
            android:text="@string/label_p20"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/label_tempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/label_tempo"/>


    <RelativeLayout
        android:id="@+id/ll_dlg_tempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dlg_m20"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/button_dlg_m5"
            android:layout_toLeftOf="@+id/button_dlg_m5"
            android:layout_toStartOf="@+id/button_dlg_m5"
            android:text="@string/label_m20"/>

        <Button
            android:id="@+id/button_dlg_m5"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/button_dlg_m1"
            android:layout_toLeftOf="@+id/button_dlg_m1"
            android:layout_toStartOf="@+id/button_dlg_m1"
            android:text="@string/label_m5"/>

        <Button
            android:id="@+id/button_dlg_m1"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/tv_dlg_tempo"
            android:layout_toLeftOf="@+id/tv_dlg_tempo"
            android:layout_toStartOf="@+id/tv_dlg_tempo"
            android:text="@string/label_m1"/>

        <TextView
            android:id="@+id/tv_dlg_tempo"
            android:layout_width="@dimen/incdec_width"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/color_emphasis_low"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/hw"
            android:textColor="@color/color_text"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/button_dlg_p1"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/tv_dlg_tempo"
            android:layout_toEndOf="@+id/tv_dlg_tempo"
            android:layout_toRightOf="@+id/tv_dlg_tempo"
            android:text="@string/label_p1"/>


        <Button
            android:id="@+id/button_dlg_p5"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/button_dlg_p1"
            android:layout_toEndOf="@+id/button_dlg_p1"
            android:layout_toRightOf="@+id/button_dlg_p1"
            android:text="@string/label_p5"/>

        <Button
            android:id="@+id/button_dlg_p20"
            style="@style/AppTheme.TempoButton"
            android:layout_alignBottom="@+id/button_dlg_p5"
            android:layout_toEndOf="@+id/button_dlg_p5"
            android:layout_toRightOf="@+id/button_dlg_p5"
            android:text="@string/label_p20"/>

    </RelativeLayout>

</LinearLayout>